<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"
        android:background="@android:color/white" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:layout_alignParentBottom="true"
        android:background="@color/color_system"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/tv_device_service"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_common_layout_bottom"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/selector_icon_device_service"
            android:gravity="center_horizontal"
            android:paddingTop="8dip"
            android:text="@string/main_sbwx"
            android:textColor="@drawable/selector_text_color_bottom"
            android:textColorHighlight="#000"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:id="@+id/tv_collect_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_common_layout_bottom"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/selector_icon_collect_info"
            android:gravity="center_horizontal"
            android:paddingTop="8dip"
            android:text="@string/main_xxcj"
            android:textColor="@drawable/selector_text_color_bottom"
            android:textColorHighlight="#000"
            android:textSize="@dimen/bottom_text_size" />

        

        <TextView
            android:id="@+id/tv_knowledge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_common_layout_bottom"
            android:drawablePadding="2dip"
            android:drawableTop="@drawable/selector_icon_knowledge"
            android:gravity="center_horizontal"
            android:paddingTop="8dip"
            android:text="@string/main_zsk"
            android:textColor="@drawable/selector_text_color_bottom"
            android:textColorHighlight="#000"
            android:textSize="@dimen/bottom_text_size" />

        <TextView
            android:id="@+id/tv_myinfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_common_layout_bottom"
            android:gravity="center"
            android:text="其他"
            android:textColor="@drawable/selector_text_color_bottom"
            android:textColorHighlight="#000"
            android:textSize="@dimen/bottom_text_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_confirm_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="24dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/new_point" />

</RelativeLayout>