<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/color_system"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_common_layout_trans"
                android:gravity="center"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/title_label_regist"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title"
                android:visibility="invisible" />
        </RelativeLayout>

        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_sjec"
            android:layout_marginTop="50dip"
            android:layout_marginBottom="20dip" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/shape_bg_round"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/width_regist_label"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:text="@string/title_label_loginname"
                    android:textColor="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_-:"
                    android:inputType="number"
                    android:paddingLeft="10dip"
                    android:shadowColor="#000"
                    android:shadowDx="10"
                    android:shadowDy="10"
                    android:shadowRadius="15"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
                
              
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/color_border" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/width_regist_label"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:text="@string/title_label_password"
                    android:textColor="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_-:"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dip"
                    android:password="true"
                    android:shadowColor="#000"
                    android:shadowDx="10"
                    android:shadowDy="10"
                    android:shadowRadius="15"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </LinearLayout>
        </LinearLayout>

        <com.websharputil.widget.ThumbImageView
            android:id="@+id/iv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:scaleType="fitStart"
            android:src="@drawable/btn_login_1"
            app:needFilter="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_versionName"
            android:textColor="@android:color/darker_gray" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*当前版本可使用自己的 [工号] 或 [手机号] 进行登录"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

    <include
        android:id="@+id/loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/widget_loading"
        android:visibility="gone" />
<TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
    android:text="Copyright 2003 - 2017\n江南嘉捷电梯股份有限公司 版权所有"
    android:gravity="center"
    android:layout_marginBottom="25dip"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"/>
</RelativeLayout>