<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/color_system"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/main_sbwx"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title" />

            <TextView
                android:id="@+id/tv_manual_maintain"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_common_layout_trans"
                android:gravity="center"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/str_manual_maintain"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_weight="10"
                android:gravity="center_vertical|left"
                android:orientation="horizontal"
                android:padding="0dip" >

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >
 	<Spinner
                        android:id="@+id/sp_workorder_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:paddingLeft="10dip"
                        android:textAlignment="center"
                        android:visibility="visible" />
                    

                    <ImageView
                        android:layout_width="15dip"
                        android:layout_height="15dip"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/icon_spinner_corner" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                   <Spinner
                        android:id="@+id/sp_workorder_source"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:paddingLeft="10dip"
                        android:textAlignment="center"
                        android:visibility="visible" />
                     <ImageView
                        android:layout_width="15dip"
                        android:layout_height="15dip"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/icon_spinner_corner" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <Spinner
                        android:id="@+id/sp_workorder_status"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:paddingLeft="10dip"
                        android:textAlignment="center"
                        android:visibility="visible" />
                    
                     <ImageView
                        android:layout_width="15dip"
                        android:layout_height="15dip"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/icon_spinner_corner" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_weight="10"
                android:background="@drawable/frame_common"
                android:gravity="center_vertical|left"
                android:orientation="horizontal"
                android:padding="0dip" >


                <ImageView
                    android:layout_width="15dip"
                    android:layout_height="15dip"
                    android:layout_marginLeft="10dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/search_04" />

                <EditText
                    android:id="@+id/et_search_keyword"
                    android:layout_width="wrap_content"
                    android:layout_height="35dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="10"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/str_hint_search_keyword"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_common" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="50dip"
                android:layout_height="30dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:background="@drawable/frame_app"
                android:padding="0dip"
                android:text="@string/str_search"
                android:textColor="#fff"
                android:textSize="@dimen/font_size_common" />
        </LinearLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/lv_workorder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dip"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:fastScrollEnabled="true"
            android:orientation="vertical" />
    </LinearLayout>

    <include
        android:id="@+id/loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/widget_loading"
        android:visibility="gone" />

</RelativeLayout>